<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.briannur_18104006.commerc.ui.explore.MapsFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_foryou"
        android:name="com.briannur_18104006.commerc.ui.foryou.ForyouFragment"
        android:label="@string/title_foryou"
        tools:layout="@layout/fragment_foryou" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.briannur_18104006.commerc.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.briannur_18104006.commerc.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>